<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    android:padding="10dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/tv_hero_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/localized_name"
        android:layout_weight="1"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv_hero_primary_attr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/primary_attr"
        android:layout_weight="1"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv_hero_attack_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/attack_type"
        android:layout_weight="1"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv_hero_roles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/roles"
        android:layout_weight="1"
        android:padding="10dp" />

</TableRow>
